--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.11.0
 Django==5.2.9
-django-ckeditor==6.7.2
+django-ckeditor-5==0.2.18
 django-jazzmin==3.0.1
-django-js-asset==3.0.1
+django-js-asset==3.1.2
 django-modeltranslation==0.19.19
+pillow==12.0.0
 python-decouple==3.8
 sqlparse==0.5.5
 typing_extensions==4.15.0
