--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ pillow==12.0.0
 python-decouple==3.8
 sqlparse==0.5.5
 typing_extensions==4.15.0
+django-allauth==65.3.1
+requests==2.32.3
+pyjwt==2.10.1
+cryptography==44.0.0
