--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ django-allauth==65.3.1
 requests==2.32.3
 pyjwt==2.10.1
 cryptography==44.0.0
+whitenoise==6.8.2
+pytest==8.3.4
+pytest-django==4.9.0
