--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,30 +13,30 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Deploy to PythonAnywhere
-      env:
-        PA_USERNAME: ${{ secrets.PA_USERNAME }}
-        PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
-        PA_HOST: ${{ secrets.PA_HOST }}  # e.g., www.learn-french.be
-      run: |
-        # 1. Pull latest code
-        curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-             -H "Authorization: Token $PA_API_TOKEN" \
-             -H "Content-Type: application/json" \
-             -d '{"executable": "bash", "working_directory": "/home/'"$PA_USERNAME"'/Learn_French"}' \
-             > console.json
-        
-        CONSOLE_ID=$(grep -o '"id": [0-9]*' console.json | awk '{print $2}')
-        
-        # Send commands to the console
-        # We chain them to ensure they run sequentially
-        curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/send_input/" \
-             -H "Authorization: Token $PA_API_TOKEN" \
-             -H "Content-Type: application/json" \
-             -d '{"input": "git pull\nsource /home/'"$PA_USERNAME"'/.virtualenvs/myenv/bin/activate\npip install -r requirements.txt\npython manage.py migrate\npython manage.py collectstatic --noinput\nexit\n"}'
+      - name: Deploy to PythonAnywhere
+        env:
+          PA_USERNAME: ${{ secrets.PA_USERNAME }}
+          PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
+          PA_HOST: ${{ secrets.PA_HOST }}
+        run: |
+          # 1. Create a new Bash console
+          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
+               -H "Authorization: Token $PA_API_TOKEN" \
+               -H "Content-Type: application/json" \
+               -d "{\"executable\": \"bash\", \"working_directory\": \"/home/$PA_USERNAME/Learn_French\"}" \
+               > console.json
+          
+          CONSOLE_ID=$(grep -o '"id": [0-9]*' console.json | awk '{print $2}')
+          
+          # 2. Send commands to the console
+          # We use double quotes for the JSON payload and escape inner quotes
+          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/send_input/" \
+               -H "Authorization: Token $PA_API_TOKEN" \
+               -H "Content-Type: application/json" \
+               -d "{\"input\": \"git pull\nsource /home/$PA_USERNAME/.virtualenvs/myenv/bin/activate\npip install -r requirements.txt\npython manage.py migrate\npython manage.py collectstatic --noinput\nexit\n\"}"
 
-        # 2. Reload the web app
-        curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_HOST/reload/" \
-             -H "Authorization: Token $PA_API_TOKEN"
+          # 3. Reload the web app
+          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_HOST/reload/" \
+               -H "Authorization: Token $PA_API_TOKEN"
