--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,7 @@ name: Deploy to PythonAnywhere
 on:
   workflow_run:
     workflows: ["Django CI"]
+    branches: [main]
     types:
       - completed
   workflow_dispatch:
