--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         
     - name: Run Tests
       run: |
-        python manage.py test apps
+        python manage.py test apps -v 2
       env:
         SECRET_KEY: 'test-key-for-ci'
         DEBUG: 'True'
