--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,6 +47,10 @@ jobs:
           
           echo "Console created with ID: $CONSOLE_ID"
           
+          # Wait for the console to be ready
+          echo "Waiting for console to initialize..."
+          sleep 5
+          
           # 2. Send commands to the console
           echo "Sending deployment commands..."
           curl -f -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/send_input/" \
