--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -53,10 +53,35 @@ jobs:
           
           # 2. Send commands to the console
           echo "Sending deployment commands..."
-          curl -f -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/send_input/" \
-               -H "Authorization: Token $PA_API_TOKEN" \
-               -H "Content-Type: application/json" \
-               -d "{\"input\": \"git pull\nsource /home/$PA_USERNAME/.virtualenvs/myenv/bin/activate\npip install -r requirements.txt\npython manage.py migrate\npython manage.py collectstatic --noinput\nexit\n\"}"
+          MAX_RETRIES=5
+          RETRY_COUNT=0
+          SUCCESS=false
+          
+          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+            # We use -s to silence progress but -S to show errors, and we check exit code
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/send_input/" \
+                 -H "Authorization: Token $PA_API_TOKEN" \
+                 -H "Content-Type: application/json" \
+                 -d "{\"input\": \"git pull\nsource /home/$PA_USERNAME/.virtualenvs/myenv/bin/activate\npip install -r requirements.txt\npython manage.py migrate\npython manage.py collectstatic --noinput\nexit\n\"}")
+            
+            if [ "$HTTP_CODE" -eq 200 ] || [ "$HTTP_CODE" -eq 201 ]; then
+              SUCCESS=true
+              echo "Commands sent successfully!"
+              break
+            elif [ "$HTTP_CODE" -eq 412 ]; then
+              echo "Console not ready (412), retrying in 10s... (Attempt $((RETRY_COUNT+1))/$MAX_RETRIES)"
+              sleep 10
+              RETRY_COUNT=$((RETRY_COUNT+1))
+            else
+              echo "Error: Unexpected HTTP code $HTTP_CODE"
+              exit 1
+            fi
+          done
+          
+          if [ "$SUCCESS" = false ]; then
+            echo "Error: Failed to send commands after $MAX_RETRIES retries."
+            exit 1
+          fi
 
           # 3. Reload the web app
           echo "Reloading web app..."
