--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,8 +48,8 @@ jobs:
           echo "Console created with ID: $CONSOLE_ID"
           
           # Wait for the console to be ready
-          echo "Waiting for console to initialize..."
-          sleep 5
+          echo "Waiting for console to initialize (60s)..."
+          sleep 60
           
           # 2. Send commands to the console
           echo "Sending deployment commands..."
