--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,69 +29,45 @@ jobs:
             exit 1
           fi
 
-          # 1. Create console and execute all commands at once
-          # This is more robust than send_input
-          echo "Creating console and executing deployment script..."
-          DEPLOY_SCRIPT="cd ~/Learn_French && git pull && source /home/$PA_USERNAME/.virtualenvs/myenv/bin/activate && pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic --noinput && echo DEPLOYMENT_COMPLETE"
-          
+          # 1. Trigger the deploy.sh script on PA
+          echo "Triggering /home/$PA_USERNAME/deploy.sh..."
           RESPONSE=$(curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
                -H "Authorization: Token $PA_API_TOKEN" \
                -H "Content-Type: application/json" \
-               -d "{\"executable\": \"bash\", \"arguments\": \"-c '$DEPLOY_SCRIPT'\"}")
+               -d "{\"executable\": \"/home/$PA_USERNAME/deploy.sh\", \"arguments\": \"\"}")
           
           CONSOLE_ID=$(echo "$RESPONSE" | jq -r '.id')
           
           if [ "$CONSOLE_ID" == "null" ] || [ -z "$CONSOLE_ID" ]; then
-            echo "Error: Failed to create console. Response:"
+            echo "Error: Failed to create console for deploy.sh. Response:"
             echo "$RESPONSE"
             exit 1
           fi
           
-          echo "Console $CONSOLE_ID created. Waiting for execution..."
+          echo "Console $CONSOLE_ID started. Waiting for execution (60s)..."
+          sleep 60
           
-          MAX_CHECK_RETRIES=3
-          CHECK_COUNT=0
-          DEPLOY_SUCCESS=false
+          # 2. Read the log file via Files API
+          echo "Reading deployment log..."
+          LOG_CONTENT=$(curl -s "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.log" \
+               -H "Authorization: Token $PA_API_TOKEN")
           
-          while [ $CHECK_COUNT -lt $MAX_CHECK_RETRIES ]; do
-            echo "Waiting 30s before checking output (Attempt $((CHECK_COUNT+1))/$MAX_CHECK_RETRIES)..."
-            sleep 30
-            
-            # 2. Check output for success marker
-            echo "Checking deployment output..."
-            OUTPUT=$(curl -s "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/get_latest_output/" \
-                 -H "Authorization: Token $PA_API_TOKEN" | jq -r '.output')
-            
-            if echo "$OUTPUT" | grep -q "DEPLOYMENT_COMPLETE"; then
-              echo "--- Console Output Start ---"
-              echo "$OUTPUT"
-              echo "--- Console Output End ---"
-              echo "✅ Deployment commands executed successfully!"
-              DEPLOY_SUCCESS=true
-              break
-            fi
-            
-            echo "Marker 'DEPLOYMENT_COMPLETE' not found yet."
-            CHECK_COUNT=$((CHECK_COUNT+1))
-          done
+          echo "=== Deployment Log ==="
+          echo "$LOG_CONTENT"
+          echo "======================"
           
-          if [ "$DEPLOY_SUCCESS" = false ]; then
-            echo "❌ Error: Deployment marker 'DEPLOYMENT_COMPLETE' not found after all attempts."
-            echo "--- Final Console Output Start ---"
-            echo "$OUTPUT"
-            echo "--- Final Console Output End ---"
-            DEPLOY_FAILED=true
+          if echo "$LOG_CONTENT" | grep -q "DEPLOYMENT_COMPLETE"; then
+            echo "✅ Deployment successful!"
+          else
+            echo "❌ Error: 'DEPLOYMENT_COMPLETE' not found in log."
+            exit 1
           fi
           
-          # 3. Delete the console to clean up
+          # 3. Clean up: Delete the console
           echo "Deleting console $CONSOLE_ID..."
           curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/" \
                -H "Authorization: Token $PA_API_TOKEN"
           
-          if [ "$DEPLOY_FAILED" = true ]; then
-            exit 1
-          fi
-
           # 4. Reload the web app
           echo "Reloading web app $PA_HOST..."
           curl -f -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_HOST/reload/" \
