--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,43 +29,37 @@ jobs:
             exit 1
           fi
 
-          # 1. Upload the deploy.sh script using base64 to avoid character issues
+          # 1. Upload the deploy.sh script (raw binary upload is most reliable)
           echo "Uploading scripts/deploy.sh..."
-          SCRIPT_BASE64=$(base64 -w 0 scripts/deploy.sh)
           curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.sh" \
                -H "Authorization: Token $PA_API_TOKEN" \
-               -H "Content-Type: application/json" \
-               -d "{\"content\": \"$SCRIPT_BASE64\"}"
+               --data-binary @scripts/deploy.sh
           
-          # 2. Make script executable via a temporary console
-          echo "Making script executable..."
-          CHMOD_RESPONSE=$(curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-               -H "Authorization: Token $PA_API_TOKEN" \
-               -H "Content-Type: application/json" \
-               -d "{\"executable\": \"bash\", \"arguments\": \"-c 'chmod +x /home/$PA_USERNAME/deploy.sh && echo CHMOD_DONE'\"}")
-          
-          CHMOD_CONSOLE_ID=$(echo "$CHMOD_RESPONSE" | jq -r '.id')
-          echo "Chmod console: $CHMOD_CONSOLE_ID"
-          sleep 5
-          
-          # 3. Delete old log if it exists
+          # 2. Delete old log if it exists to avoid reading stale data
           echo "Cleaning old log..."
           curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.log" \
                -H "Authorization: Token $PA_API_TOKEN" || true
           
-          # 4. Trigger the deploy.sh script
+          # 3. Trigger the deploy.sh script via bash
+          # Running via 'bash' avoids the need for chmod +x
           echo "Executing deployment script..."
           DEPLOY_RESPONSE=$(curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
                -H "Authorization: Token $PA_API_TOKEN" \
                -H "Content-Type: application/json" \
-               -d "{\"executable\": \"/home/$PA_USERNAME/deploy.sh\", \"arguments\": \"\"}")
+               -d "{\"executable\": \"bash\", \"arguments\": \"/home/$PA_USERNAME/deploy.sh\"}")
           
           DEPLOY_CONSOLE_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
+          
+          if [ "$DEPLOY_CONSOLE_ID" == "null" ] || [ -z "$DEPLOY_CONSOLE_ID" ]; then
+            echo "Error: Failed to create console. Response:"
+            echo "$DEPLOY_RESPONSE"
+            exit 1
+          fi
           echo "Deploy console: $DEPLOY_CONSOLE_ID"
           
-          # 5. Poll the log file for progress
+          # 4. Poll the log file for progress
           echo "Polling deployment log..."
-          MAX_ATTEMPTS=12
+          MAX_ATTEMPTS=15
           WAIT_TIME=10
           DEPLOY_SUCCESS=false
           
@@ -76,8 +70,14 @@ jobs:
             LOG_CONTENT=$(curl -s "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/files/path/home/$PA_USERNAME/deploy.log" \
                  -H "Authorization: Token $PA_API_TOKEN")
             
-            if [ -z "$LOG_CONTENT" ] || [[ "$LOG_CONTENT" == *"Not Found"* ]]; then
+            # If the response is JSON with 'detail', the file doesn't exist yet
+            if echo "$LOG_CONTENT" | jq -e '.detail' > /dev/null 2>&1; then
               echo "Log file not created yet..."
+              continue
+            fi
+            
+            if [ -z "$LOG_CONTENT" ]; then
+              echo "Log file is empty..."
               continue
             fi
             
@@ -97,10 +97,8 @@ jobs:
             fi
           done
           
-          # 6. Cleanup consoles
-          echo "Cleaning up consoles..."
-          curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CHMOD_CONSOLE_ID/" \
-               -H "Authorization: Token $PA_API_TOKEN" || true
+          # 5. Cleanup: Delete the console
+          echo "Cleaning up console $DEPLOY_CONSOLE_ID..."
           curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$DEPLOY_CONSOLE_ID/" \
                -H "Authorization: Token $PA_API_TOKEN" || true
           
@@ -109,7 +107,7 @@ jobs:
             exit 1
           fi
 
-          # 7. Reload the web app
+          # 6. Reload the web app
           echo "Reloading web app $PA_HOST..."
           curl -f -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_HOST/reload/" \
                -H "Authorization: Token $PA_API_TOKEN"
