debug: add compilemessages to deploy and debug info to header

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,6 +100,9 @@ jobs:
             echo "📁 Collecting static files (with cleanup)..."
             python manage.py collectstatic --noinput --clear
             
+            echo "🌐 Compiling translation messages..."
+            python manage.py compilemessages --ignore=.venv
+            
             echo "♻️ Reloading web app..."
             touch /var/www/\${USERNAME}_pythonanywhere_com_wsgi.py
             
